--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -5,5 +5,10 @@
 
 .formDivLabel { 
     margin: 0; 
-    padding: 0 
+    padding: 0 ;
+}
+
+.errorMessage {
+    color: red;
+    font-size: 10px;
 }
