--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -1,14 +1,26 @@
 .formBlock { 
-    margin: 20px 0; 
+    margin: 5px 0; 
+ 
         
 }
 
+.formBlock input, textarea{ 
+    border: 1px dashed #000;
+    margin-bottom: 20px;
+    width: 275px;
+}
+
 .formDivLabel { 
-    margin: 0; 
+    margin: 0;
     padding: 0 ;
+    color: #000;
+    line-height: 10px;
 }
 
 .errorMessage {
     color: red;
     font-size: 10px;
+    margin-top: -15px;
+    margin-bottom: 15px;
+    
 }
